Added Classy_cosmo_container, cosmo & likelihood calculations work for first point, crash afterwards since ccc.data object destroyed after each point

--- a/yaml_files/CosmoBit_testMP.yaml
+++ b/yaml_files/CosmoBit_testMP.yaml
@@ -73,6 +73,10 @@ ObsLikes:
     module:       CosmoBit
     type:         double
 
+  - purpose:      LogLike
+    capability:   cap_test_classy
+    module:       CosmoBit
+    type:         double
 
 #======== Rule entries ========
 Rules:
