"Added capabilities 'init_cosmo_args_from_MPLike' and 'set_MP_experiment_names' (still needs proper implementing) 	modified:   CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp 	modified:   CosmoBit/src/CosmoBit.cpp 	modified:   yaml_files/CosmoBit_testMP.yaml

--- a/yaml_files/CosmoBit_testMP.yaml
+++ b/yaml_files/CosmoBit_testMP.yaml
@@ -68,15 +68,20 @@ Scanner:
 #======== Observables of interest ========
 ObsLikes:
  
+  - purpose:      Obs
+    capability:   Omega0_m_the_classy_way
+    module:       CosmoBit
+    type:         double
+  
   - purpose:      LogLike
     capability:   MontePythonLike
     module:       CosmoBit
     type:         double
-
-  - purpose:      LogLike
-    capability:   cap_test_classy
-    module:       CosmoBit
-    type:         double
+#
+  #- purpose:      LogLike
+  #  capability:   cap_test_classy
+  #  module:       CosmoBit
+  #  type:         double
 
 #======== Rule entries ========
 Rules:
