Factorise the MontePython LogLikes into: a combined lnL + lnL per experiment (like ColliderBit. Kind of)
	modified:   CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp
	modified:   CosmoBit/src/CosmoBit.cpp
	modified:   yaml_files/CosmoBit_testMP.yaml

--- a/yaml_files/CosmoBit_testMP.yaml
+++ b/yaml_files/CosmoBit_testMP.yaml
@@ -74,9 +74,13 @@ ObsLikes:
     type:         double
   
   - purpose:      LogLike
-    capability:   MontePythonLike
+    capability:   MP_Combined_LogLike
     module:       CosmoBit
     type:         double
+
+  - purpose:      Observable
+    capability:   MP_LogLike_per_experiment
+    type:         map_str_dbl
 #
   #- purpose:      LogLike
   #  capability:   cap_test_classy
