--- a/yaml_files/CosmoBit_testMP.yaml
+++ b/yaml_files/CosmoBit_testMP.yaml
@@ -89,7 +89,14 @@ ObsLikes:
 
 #======== Rule entries ========
 Rules:
-  
+
+  - capability: MP_experiment_names
+    function: set_MP_experiment_names
+    options:
+      Likelihoods: ["Pantheon", "bao"]  
+      # should eventually be possible to choose any MP like, atm only bao & Pantheon safe to use
+      # still need to write a proper patch for MPLike backend & test all Likes
+
   - capability: T_cmb
     options:
       T_cmb: 2.7255
