--- a/yaml_files/CosmoBit_testMP.yaml
+++ b/yaml_files/CosmoBit_testMP.yaml
@@ -34,7 +34,7 @@ Parameters:
  StandardModel_numass_degenerate: !import include/StandardModel_numass_degenerate_scan.yaml
 
  # Cosmological nuisance parameters (except for Planck CMB Likelihoods) 
- #cosmo_nuisance_param_Pantheon: !import include/cosmo_nuisance_params_Pantheon.yaml
+ cosmo_nuisance_params_Pantheon: !import include/cosmo_nuisance_params_Pantheon.yaml
 
 #======== Prior setup ========
 Priors:
@@ -102,8 +102,9 @@ Rules:
   - capability: MP_experiment_names
     function: set_MP_experiment_names
     options:
-      Likelihoods: ["bao"]  
-      # should eventually be possible to choose any MP like, atm only bao & Pantheon safe to use
+      Likelihoods: ["bao","Pantheon","Planck_SZ",]  
+      # should eventually be possible to choose any MP like, atm only bao, Pantheon, Planck_SZ (& kids after 
+      # downloading data and when commenting out line 'parser_mp.existing_file(fname)') safe to use
       # still need to write a proper patch for MPLike backend & test all Likes
 
   - capability: T_cmb
