--- a/yaml_files/CosmoBit_testMP.yaml
+++ b/yaml_files/CosmoBit_testMP.yaml
@@ -133,6 +133,8 @@ Rules:
                     # since otherwise the automatic output setting will not work
       l_max_scalars : 
 
+  # you have to set by hand if you want to set the class parameters with or without setting arguments from MontePython Likelihoods
+  # if the montepythonlike backend is installed (if not it should automatically choose the function 'init_Classy_cosmo_container')
   - capability: get_Classy_cosmo_container
     function: init_Classy_cosmo_container_with_MPLike
     module: CosmoBit
