Added missing EXCLUDE_HEPMC flag to cmake_variables 	modified:   cmake/cmake_variables.hpp.in

--- a/cmake/cmake_variables.hpp.in
+++ b/cmake/cmake_variables.hpp.in
@@ -69,6 +69,9 @@
 /// Leave out RestFrames
 #cmakedefine EXCLUDE_RESTFRAMES 1
 
+/// Leave out HepMC
+#cmakedefine EXCLUDE_HEPMC 1
+
 /// Version info
 /// @{
 #define GAMBIT_VERSION_MAJOR    @GAMBIT_VERSION_MAJOR@
