--- a/cmake/cmake_variables.hpp.in
+++ b/cmake/cmake_variables.hpp.in
@@ -63,14 +63,17 @@
 /// Found/installed pybind11
 #cmakedefine HAVE_PYBIND11 1
 
+/// Leave out HepMC
+#cmakedefine EXCLUDE_HEPMC 1
+
 /// Leave out ROOT
 #cmakedefine EXCLUDE_ROOT 1
 
 /// Leave out RestFrames
 #cmakedefine EXCLUDE_RESTFRAMES 1
 
-/// Leave out HepMC
-#cmakedefine EXCLUDE_HEPMC 1
+/// Path to RestFrames include directory
+#cmakedefine RESTFRAMES_INCLUDE "@RESTFRAMES_INCLUDE@"
 
 /// Version info
 /// @{
