Now explicitly linking RestFrames to gambit_preload to enforce load order 	modified:   CMakeLists.txt 	modified:   cmake/contrib.cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -580,7 +580,7 @@ if(";${GAMBIT_BITS};" MATCHES ";ColliderBit;")
 endif()
 
 # If SpecBit is in use, make flexiblesusy a dependency of SpecBit
-if(";${GAMBIT_BITS};" MATCHES ";ColliderBit;")
+if(";${GAMBIT_BITS};" MATCHES ";SpecBit;")
   add_dependencies(SpecBit flexiblesusy)
 endif()
 
