Removed 'path_to_classy' classy BE convinience function and all dependencies on it. MP never runs classy so there is not need to pass this information to it. Adopted some yaml files to new structure
	modified:   Backends/include/gambit/Backends/frontends/MontePythonLike_3_1_0.hpp
	modified:   Backends/include/gambit/Backends/frontends/classy_2_6_3.hpp
	modified:   Backends/include/gambit/Backends/frontends/classy_exo_2_7_0.hpp
	modified:   Backends/src/frontends/MontePythonLike_3_1_0.cpp
	modified:   Backends/src/frontends/classy_2_6_3.cpp
	modified:   Backends/src/frontends/classy_exo_2_7_0.cpp
	modified:   CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp
	modified:   CosmoBit/src/CosmoBit.cpp
	modified:   yaml_files/CosmoBit_exoClass.yaml
	modified:   yaml_files/CosmoBit_testMP.yaml

--- a/yaml_files/CosmoBit_exoClass.yaml
+++ b/yaml_files/CosmoBit_exoClass.yaml
@@ -76,9 +76,9 @@ Scanner:
 #======== Observables of interest ========
 ObsLikes:
  
-  - purpose:      Obs
-    capability:   Omega0_m
-    function:     get_Omega0_m_classy 
+  #- purpose:      Obs
+  #  capability:   Omega0_m
+  #  function:     get_Omega0_m_classy 
 
   - purpose:      LogLike
     capability:   Pantheon_LogLike
