Fixed double free bug related to exoclassy patch (cosmo object static & removed free(pth->..) in exoclassy patch)
	modified:   Backends/patches/classy/exo_2.7.0/classy_exo_2.7.0.diff
	modified:   Backends/src/frontends/classy_2_6_3.cpp
	modified:   Backends/src/frontends/classy_exo_2_7_0.cpp
	modified:   yaml_files/CosmoBit_exoClass.yaml

--- a/yaml_files/CosmoBit_exoClass.yaml
+++ b/yaml_files/CosmoBit_exoClass.yaml
@@ -70,7 +70,7 @@ Scanner:
 
     random:
       plugin: random
-      point_number: 2
+      point_number: 4
       like:  LogLike
 
 #======== Observables of interest ========
@@ -150,9 +150,15 @@ Rules:
   - capability: lifetime
     function: lifetime_CosmoALP
 
+  - capability: Pantheon_LogLike
+    backends:
+      - {backend: exoclass, version: 2.7.0}
+
   # next 3 rules: all to calculate Likelihoods the class way (not the classy way)
   # verified that BAO, Pantheon & Planck_SZ all give same result the class way & classy way (through MP)
   - capability: BAO_LogLike
+    backends:
+    - {backend: exoclass, version: 2.7.0}
     options:
       DataFile:  BAO_2014.dat
 
