Divided cosmo_nuisance_param model into different Models for different (MontePython) Likelihoods
	modified:   CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp
	modified:   Models/include/gambit/Models/models/CosmoModels.hpp
	new file:   Models/include/gambit/Models/models/CosmoNuisanceModels.hpp
	new file:   Models/src/models/CosmoNuisanceModels.cpp
	modified:   yaml_files/CosmoBit_exoClass.yaml
	modified:   yaml_files/CosmoBit_testMP.yaml

--- a/yaml_files/CosmoBit_testMP.yaml
+++ b/yaml_files/CosmoBit_testMP.yaml
@@ -26,7 +26,7 @@ Parameters:
  StandardModel_numass_degenerate: !import include/StandardModel_numass_degenerate_scan.yaml
 
  # Cosmological nuisance parameters (except for Planck CMB Likelihoods) 
- cosmo_nuisance_params: !import include/cosmo_nuisance_params.yaml
+ cosmo_nuisance_params_Pantheon: !import include/cosmo_nuisance_params_Pantheon.yaml
 
 #======== Prior setup ========
 Priors:
